--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,14 @@ main {
     width: 80%;
     margin: 2.5rem auto;
 }
+
+table {
+    border-collapse: collapse;
+}
+
+th,
+td {
+    margin: 0;
+    padding: 0.5rem;
+    border: 1px solid black;
+}
